# ViLamr

./: README.md  pyproject.toml  setup.py
docs/: MCoT-Instruct.md
playground/data/vilamr_eval/gd_vcr/: val.json
playground/data/vilamr_eval/gd_vcr/results/: vilamr-llama31-8b_pred.jsonl  vilamr-llama31-8b_result.jsonl  vilamr-vicuna-13b_pred.jsonl  vilamr-vicuna-13b_result.jsonl
playground/data/vilamr_eval/geoqa/: test.json
playground/data/vilamr_eval/m3cot/: test.json
playground/data/vilamr_eval/mm_bench/: dev_en.json
playground/data/vilamr_eval/mmmu/: val.json
playground/data/vilamr_eval/mmstar/: test.json
playground/data/vilamr_eval/rwqa/: test.json
playground/data/vilamr_eval/wemath/: testmini.json
scripts/: eval_all.sh
scripts/vilamr_llama3_8b/: finetune_base.sh  inference_base.sh  pretrain.sh
scripts/vilamr_vicuna_13b/: finetune_base.sh  inference_base.sh  pretrain.sh
vilamr/: conversation.py  mm_utils.py  utils.py  vilamr_utils.py
vilamr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vilamr/eval/: compute_accuracy.py  extract_answer.py  inference_llama3.py  inference_vicuna.py
vilamr/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py  utils.py
vilamr/model/language_model/: llava_llama.py
vilamr/model/multimodal_encoder/: builder.py  clip_encoder.py  visual_encoder.py
vilamr/model/multimodal_projector/: builder.py  decision_nce.py  gate_mixer.py
vilamr/train/: llava_trainer.py  train.py  train_mem.py  train_xformers.py
(+26 files in other folders)
